[package]
name = "mohn"
version = "0.1.0"
description = "Mohn desktop app"
authors = []
edition = "2021"

[lib]
name = "mohn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-oauth = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-libmpv = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
